# robine

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION.md  README.md  rust-toolchain.toml
crates/robine-cli/: Cargo.toml
crates/robine-cli/src/: lsp.rs  main.rs
crates/robine-codegen-cranelift/: Cargo.toml
crates/robine-codegen-cranelift/src/: lib.rs
crates/robine-core/: Cargo.toml
crates/robine-core/src/: diagnostic.rs  engine.rs  formatter.rs  lib.rs  project.rs  semantic.rs  syntax.rs
crates/robine-rust-bridge-demo/: Cargo.toml
crates/robine-rust-bridge-demo/src/: lib.rs
doc/specs/: README.md
doc/specs/_template/: spec.md
doc/specs/ai/AI-001-typed-structural-patches/: spec.md
doc/specs/ai/AI-002-holes-provenance-and-verification/: spec.md
doc/specs/architecture/ARCH-001-public-contracts/: spec.md
doc/specs/architecture/ARCH-002-dependency-policies/: spec.md
doc/specs/architecture/ARCH-003-adapters-and-api-evolution/: spec.md
doc/specs/compiler/CPL-001-pipeline-sealing-and-targets/: spec.md
doc/specs/compute/COMP-001-heterogeneous-processing-fabric/: spec.md
doc/specs/compute/COMP-002-tensors-kernels-and-ir/: spec.md
doc/specs/compute/COMP-003-placement-specialization-and-fallback/: spec.md
doc/specs/compute/COMP-004-precision-energy-and-quality/: spec.md
doc/specs/data/DATA-001-serialization-and-schema-evolution/: spec.md
doc/specs/data/DATA-002-logical-data-and-physical-layout/: spec.md
doc/specs/devex/DX-001-incremental-compiler/: spec.md
doc/specs/devex/DX-002-live-repl/: spec.md
doc/specs/devex/DX-003-hot-reload-and-migration/: spec.md
doc/specs/devex/DX-004-diagnostics-testing-and-proofs/: spec.md
doc/specs/interop/FFI-001-native-and-platform-abi/: spec.md
doc/specs/interop/FFI-002-python-and-model-interop/: spec.md
doc/specs/interop/FFI-003-swift-kotlin-object-interop/: spec.md
doc/specs/language/LANG-001-design-principles/: spec.md
doc/specs/language/LANG-002-source-forms-and-syntax/: spec.md
doc/specs/language/LANG-003-values-expressions-patterns-modules/: spec.md
doc/specs/language/LANG-004-hygienic-macros-staging-and-derivation/: spec.md
doc/specs/language/LANG-005-data-first-programming-and-explicit-identity/: spec.md
doc/specs/meta/META-001-specification-process/: spec.md
doc/specs/network/NET-001-typed-protocols-and-distribution/: spec.md
doc/specs/realtime/RT-001-realtime-audio/: spec.md
editors/zed-robine/: Cargo.toml  LICENSE  README.md  extension.toml
editors/zed-robine/src/: lib.rs
examples/hello/: robine.toml
examples/hello/src/: main.ro  main.robine  math.ro
examples/rust-bridge/: robine.toml
examples/rust-bridge/src/: main.robine
scripts/: prepare-zed-dev-extension.mjs  smoke-lsp.mjs  validate-specs.mjs
syntax/tree-sitter-robine/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
syntax/tree-sitter-robine/bindings/rust/: build.rs  lib.rs
syntax/tree-sitter-robine/queries/: highlights.scm
syntax/tree-sitter-robine/src/: grammar.json  node-types.json  parser.c
syntax/tree-sitter-robine/test/corpus/: bootstrap.txt
(+21 files in other folders)
