[package]
name = "robine-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "robine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
robine-codegen-cranelift.workspace = true
robine-core.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
