[package]
name = "robine-codegen-cranelift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
robine-core.workspace = true
robine-rust-bridge-demo.workspace = true

[lints]
workspace = true
